--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.13",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "phosphor-react": "^1.4.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
