--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,8 @@
     ],
     "jsx": "react-jsx",
     "importHelpers": true,
-    "module": "node16",
-    "moduleResolution": "node16",
+    "module": "es2022",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "sourceMap": true,
