--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "@tailwindcss/vite": "^4.1.13",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "electron-router-dom": "^2.1.0",
     "phosphor-react": "^1.4.1",
+    "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
