--- a/package.json
+++ b/package.json
@@ -26,6 +26,11 @@
     "@electron-toolkit/preload": "^3.0.2",
     "@electron-toolkit/utils": "^4.0.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@tiptap/extension-highlight": "^3.4.4",
+    "@tiptap/extension-placeholder": "^3.4.4",
+    "@tiptap/extension-typography": "^3.4.4",
+    "@tiptap/react": "^3.4.4",
+    "@tiptap/starter-kit": "^3.4.4",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "electron-router-dom": "^2.1.0",
